unpackaged/main/default/objects/Contact/fields/Backup_Email__c.field-meta.xml
<CustomField>
    <fullName>Backup_Email__c</fullName>
    <description>Using to store Invalid Email from error files</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Backup Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>