unpackaged/main/default/objects/Contact/fields/Casino_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Casino_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Casino Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>