unpackaged/main/default/objects/Contact/fields/Communication_Alert__c.field-meta.xml
<CustomField>
    <fullName>Communication_Alert__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>