unpackaged/main/default/objects/Contact/fields/Communication_Alert_for_Agents__c.field-meta.xml
<CustomField>
    <fullName>Communication_Alert_for_Agents__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Alert for Agents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>