unpackaged/main/default/objects/Contact/fields/Communication_Alert_Sign__c.field-meta.xml
<CustomField>
    <fullName>Communication_Alert_Sign__c</fullName>
    <formula>IF( ISBLANK(Communication_Alert__c ), &#39;&#39;, 
IMAGE(&quot;/resource/1611735687000/ContactCommunicationAlert&quot;, &quot; &quot;, 22,22)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Communication Alert Sign</label>
    <type>Text</type>
</CustomField>