unpackaged/main/default/objects/Contact/fields/Distance_to_property__c.field-meta.xml
<CustomField>
    <fullName>Distance_to_property__c</fullName>
    <label>Distance to property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>