unpackaged/main/default/objects/Contact/fields/HRI_account__c.field-meta.xml
<CustomField>
    <fullName>HRI_account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HRI account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>