unpackaged/main/default/objects/Contact/fields/IP_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Code__c</fullName>
    <description>This field is an External ID for the contact data coming from Brierley so marking the External ID check box as True</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>IP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>