unpackaged/main/default/objects/Contact/fields/Loyalty_Id__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loyalty Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>