unpackaged/main/default/objects/Contact/fields/Loyalty_Type__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Type__c</fullName>
    <label>Loyalty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HRI</fullName>
            </value>
            <value>
                <fullName>SGA</fullName>
            </value>
            <value>
                <fullName>Atlantic City</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>Northern Indiana</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>