unpackaged/main/default/objects/Contact/fields/Member_Source__c.field-meta.xml
<CustomField>
    <fullName>Member_Source__c</fullName>
    <label>Member Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brierley</fullName>
            </value>
            <value>
                <fullName>Medallia</fullName>
            </value>
            <value>
                <fullName>In Contact</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>