unpackaged/main/default/objects/Contact/fields/Member_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Status_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>