unpackaged/main/default/objects/Contact/fields/MSD_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>MSD_CreatedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSD CreatedDate</label>
    <type>Date</type>
</CustomField>