unpackaged/main/default/objects/Contact/fields/MSDContactOwner__c.field-meta.xml
<CustomField>
    <fullName>MSDContactOwner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSD Contact Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>