unpackaged/main/default/objects/Contact/fields/Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Name_Prefix__c</fullName>
    <label>Name Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>