unpackaged/main/default/objects/Contact/fields/Non_Member_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_Member_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Member Date</label>
    <type>Date</type>
</CustomField>