unpackaged/main/default/objects/Contact/fields/OK_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>OK_to_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OK to Contact</label>
    <type>Checkbox</type>
</CustomField>