unpackaged/main/default/objects/Contact/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Player ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>