unpackaged/main/default/objects/Contact/fields/Player_type_distance__c.field-meta.xml
<CustomField>
    <fullName>Player_type_distance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Player type distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>