unpackaged/main/default/objects/Contact/fields/Preferred_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_to_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Time to Contact</label>
    <type>DateTime</type>
</CustomField>