unpackaged/main/default/objects/Contact/fields/Rank_Value__c.field-meta.xml
<CustomField>
    <fullName>Rank_Value__c</fullName>
    <label>Rank Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>