unpackaged/main/default/objects/Contact/fields/Sms_Email__c.field-meta.xml
<CustomField>
    <fullName>Sms_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sms Email</label>
    <type>Email</type>
</CustomField>