unpackaged/main/default/objects/Contact/fields/System_Contact_Update_Temp__c.field-meta.xml
<CustomField>
    <fullName>System_Contact_Update_Temp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Contact Update Temp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>