unpackaged/main/default/objects/Contact/fields/System_EmailFNLN__c.field-meta.xml
<CustomField>
    <fullName>System_EmailFNLN__c</fullName>
    <formula>Email +&#39;-&#39;+ FirstName +&#39;-&#39;+ LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System EmailFNLN</label>
    <type>Text</type>
</CustomField>