unpackaged/main/default/objects/Contact/fields/System_EmailFNLN_Text__c.field-meta.xml
<CustomField>
    <fullName>System_EmailFNLN_Text__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>System_EmailFNLN_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>