unpackaged/main/default/objects/Contact/fields/System_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Record_Type_Name__c</fullName>
    <description>storing the record type name to use in trigger</description>
    <formula>RecordType.DeveloperName</formula>
    <label>System Record Type Name</label>
    <type>Text</type>
</CustomField>