unpackaged/main/default/objects/Contact/fields/System_Run_Duplicate_Rule_Via_Code__c.field-meta.xml
<CustomField>
    <fullName>System_Run_Duplicate_Rule_Via_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only used in code to check duplicate Rules</description>
    <label>System Run Duplicate Rule Via Code</label>
    <type>Checkbox</type>
</CustomField>