unpackaged/main/default/objects/Contact/fields/Tier_Light__c.field-meta.xml
<CustomField>
    <fullName>Tier_Light__c</fullName>
    <formula>IF(
OR( 
ISPICKVAL(Tier_Name__c , &#39;X-Card_Rock Loyalty&#39;) ,
ISPICKVAL(Tier_Name__c , &#39;Elite&#39;) ,
ISPICKVAL(Tier_Name__c , &#39;Platinum&#39;) ,
ISPICKVAL(Tier_Name__c , &#39;Premier&#39;) 
)
,
IMAGE(
CASE( Tier_Name__c ,
&#39;X-Card_Rock Loyalty&#39;,&#39;/resource/ContactTierLights/Blue.png&#39;,
&#39;Elite&#39;,&#39;/resource/ContactTierLights/Green.png&#39;,
&#39;Platinum&#39;,&#39;/resource/ContactTierLights/Yellow.png&#39;,
&#39;Premier&#39;,&#39;/resource/ContactTierLights/Red.png&#39;,&quot; &quot;),&quot; &quot;,22,22)
,
&#39;&#39;)</formula>
    <label>Tier Light</label>
    <type>Text</type>
</CustomField>