unpackaged/main/default/objects/Contact/fields/Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Name__c</fullName>
    <label>Tier Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X-Card_Rock Royalty</fullName>
                <label>X-Card / Rock Royalty</label>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>HRI VIP</fullName>
            </value>
            <value>
                <fullName>Paid (HRI)</fullName>
            </value>
            <value>
                <fullName>Free (HRI)</fullName>
            </value>
            <value>
                <fullName>XCARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>