unpackaged/main/default/objects/Contact/fields/Unity_Loyalty_ID__c.field-meta.xml
<CustomField>
    <fullName>Unity_Loyalty_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unity Loyalty Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>