unpackaged/main/default/objects/Contact/fields/Work_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_Ext__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Phone Ext</label>
    <length>18</length>
    <type>Text</type>
</CustomField>