unpackaged/main/default/objects/Contact/recordTypes/Customer_Guest.recordType-meta.xml
<RecordType>
    <fullName>Customer_Guest</fullName>
    <active>true</active>
    <description>Represents customer and guest contacts</description>
    <label>Customer &amp; Guest</label>
</RecordType>