unpackaged/main/default/objects/Contact/recordTypes/Franchise_Managed_Property_Employee.recordType-meta.xml
<RecordType>
    <fullName>Franchise_Managed_Property_Employee</fullName>
    <active>true</active>
    <description>Represents franchise and managed location employees contacts</description>
    <label>Franchise &amp; Managed Location Employee</label>
</RecordType>