unpackaged/main/default/objects/Contact/validationRules/Loyalty_Type_is_required_with_Loyalty_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Loyalty_Type_is_required_with_Loyalty_ID</fullName>
    <active>true</active>
    <description>validation rule to make Loyalty Type fields is required only when Loyalty ID is specifed by the user</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&#39;Customer_Guest&#39;,
Not(ISBLANK( Loyalty_Id__c )),
ISBLANK( Text(Loyalty_Type__c))
)</errorConditionFormula>
    <errorDisplayField>Loyalty_Type__c</errorDisplayField>
    <errorMessage>Loyalty Type is required with Loyalty ID</errorMessage>
</ValidationRule>