unpackaged/main/default/objects/Contact/validationRules/Matching_Account_Contact_Record_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>Matching_Account_Contact_Record_Types</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Customer &amp; Guest&#39;
&amp;&amp;
Account.RecordType.DeveloperName = &#39;Franchise &amp; Managed Location Account&#39;</errorConditionFormula>
    <errorMessage>Customer/Guest type of Contact can&#39;t be created on Franchise/Managed Location Account</errorMessage>
</ValidationRule>