unpackaged/main/default/objects/Contact/validationRules/when_Loyalty_Type_Given.validationRule-meta.xml
<ValidationRule>
    <fullName>when_Loyalty_Type_Given</fullName>
    <active>true</active>
    <description>validation rule to make Loyalty ID/IP Code fields is required only when Loyalty Type   is specifed by the user</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&#39;Customer_Guest&#39;,
NOT(ISBLANK( Text(Loyalty_Type__c))) ,
ISBLANK( Loyalty_Id__c ),
ISBLANK( IP_Code__c )
)</errorConditionFormula>
    <errorMessage>Loyalty ID or IP Code is required with Loyalty Type.</errorMessage>
</ValidationRule>