unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Tier_Name__c</columns>
    <columns>Loyalty_Id__c</columns>
    <columns>Loyalty_Type__c</columns>
    <columns>Member_Status__c</columns>
    <columns>Tier_Light__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>