unpackaged/main/default/objects/Contact/listViews/Contacts_Sourced_from_Medallia.listView-meta.xml
<ListView>
    <fullName>Contacts_Sourced_from_Medallia</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Tier_Name__c</columns>
    <columns>Tier_Light__c</columns>
    <columns>Casino_Account_Number__c</columns>
    <columns>Rank__c</columns>
    <columns>Rank_Value__c</columns>
    <columns>AgeSegment__c</columns>
    <columns>Property_Tier__c</columns>
    <columns>Player_type_distance__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer_Guest</value>
    </filters>
    <filters>
        <field>Member_Source__c</field>
        <operation>equals</operation>
        <value>Medallia</value>
    </filters>
    <label>Contacts Sourced from Medallia</label>
</ListView>