unpackaged/main/default/objects/Contact/listViews/Dynamics_Customer_Guest_Contacts.listView-meta.xml
<ListView>
    <fullName>Dynamics_Customer_Guest_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Tier_Name__c</columns>
    <columns>Loyalty_Id__c</columns>
    <columns>Loyalty_Type__c</columns>
    <columns>Member_Status__c</columns>
    <columns>Tier_Light__c</columns>
    <columns>MSDContactOwner__c</columns>
    <columns>MSD_CreatedDate__c</columns>
    <columns>MSD_External_ID__c</columns>
    <columns>Member_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer_Guest</value>
    </filters>
    <filters>
        <field>MSD_External_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Dynamics Customer/Guest Contacts</label>
</ListView>