unpackaged/main/default/objects/Contact/listViews/Franchise_Managed_Locations_Contacts.listView-meta.xml
<ListView>
    <fullName>Franchise_Managed_Locations_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>Type__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Franchise_Managed_Property_Employee</value>
    </filters>
    <label>Franchise/Managed Location Employees</label>
</ListView>