unpackaged/main/default/objects/Contact/listViews/Platinum_Customer_Guest_Contacts.listView-meta.xml
<ListView>
    <fullName>Platinum_Customer_Guest_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Tier_Name__c</columns>
    <columns>Loyalty_Id__c</columns>
    <columns>Loyalty_Type__c</columns>
    <columns>Member_Status__c</columns>
    <columns>Tier_Light__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Customer_Guest</value>
    </filters>
    <filters>
        <field>Tier_Name__c</field>
        <operation>equals</operation>
        <value>Platinum</value>
    </filters>
    <label>Platinum Customer/Guest Contacts</label>
</ListView>